# python-projects

./: .gitignore  LICENSE  README.md  block-letters.py  cheatsheat.md  cheatsheet.md  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
codecademy_projects/: app.py  basta_fazoolin.py  block_letters.py  carlys_cuts.py  coded_correspondence.py  gradebook.py  magic_8ball.py  physics_class.py  reciepts_for_lovely_loveseats.py  sals_shipping.py  scrabble.py  thread_shed.py
codecademy_projects/hacking_the_fender/: hacking_the_fender.py
codecademy_projects/time _travelers_toolkit/: custom_module.py  time_travelers_toolkit.py
codecademy_projects/time_travelers_toolkit/: time_travelers_toolkit.py
